syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "CalibrationInfoProto";

import "sdc/biceps/extension.proto";
import "sdc/biceps/localizedtext.proto";
import "sdc/biceps/codedvalue.proto";
import "sdc/biceps/measurement.proto";
import "sdc/biceps/calibrationstate.proto";
import "sdc/biceps/calibrationtype.proto";
import "google/protobuf/wrappers.proto";

message CalibrationInfoMsg {
  ExtensionMsg element1 = 1;
  message CalibrationDocumentationMsg {
    repeated LocalizedTextMsg documentation = 1;
    message CalibrationResultMsg {
      CodedValueMsg code = 1;
      MeasurementMsg value = 2;
    }
    repeated CalibrationResultMsg calibration_result = 2;
  }
  repeated CalibrationDocumentationMsg calibration_documentation = 2;
  CalibrationStateMsg a_component_calibration_state = 3;
  CalibrationTypeMsg a_type = 4;
  google.protobuf.UInt64Value a_time = 5;
}
